<?xml version="1.0"?>
<package>
  <name>pysdf</name>
  <version>0.0.0</version>
  <description>
    Python library to parse SDF into class hierarchy and export URDF
  </description>

  <maintainer email="andreas.bihlmaier@gmx.de">Andreas Bihlmaier</maintainer>
  <license>MIT</license>
  <url type="website">http://wiki.ros.org/pysdf</url>
  <author email="andreas.bihlmaier@gmx.de">Andreas Bihlmaier</author>

  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
